--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
 
 
 <span class="addBtn material-symbols-rounded">add</span>
-<span class="setBtn material-symbols-rounded">tune</span>
-
+<div class="topBar">
+	<span class="setBtn material-symbols-rounded">tune</span>
+	<img class="logo" src="Logo.svg" alt="XPENSE">
+</div>
 	<script src="script.js"></script>	
 </body>
 </html>
