--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	 -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<style>
+	.material-symbols-rounded {
+ 		font-variation-settings:
+  			'FILL' 1,
+  			'wght' 700,
+  			'GRAD' 200,
+  			'opsz' 48
+}
+</style>
 	<link rel="stylesheet" href="style.css" />
 	<!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"> -->
 	<title>Xpense v3</title>
