--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <!-- Main Screen -->
 <div class="wraper ">
 	<div class="dashboard ">
+	<div class="dashboardExpander"></div>
 		<div class="mainSection">
 			<div class="balance">Balance</div>
 			<div class="balanceAmnt">0.00</div>
