--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <!-- Main Screen -->
 <div class="wraper ">
 	<div class="dashboard ">
-	<div class="dashboardExpander"></div>
+		<div class="hidder"></div>
 		<div class="mainSection">
 			<div class="balance">Balance</div>
 			<div class="balanceAmnt">0.00</div>
@@ -59,7 +59,8 @@
 			<div class="plannedBalanceAmnt">0.00</div>
 			<div class="plannedBalancePLN">PLN</div>
 		</div>
-		<div class="sectionToHide blockDisplay ">
+		<div class="dashboardExpander">
+		<div class="sectionToHide ">
 
 			<div class="expenses">Expenses</div>
 			<div class="expensesAmnt">0.00</div>
@@ -73,8 +74,9 @@
 			<div class="savingsAmnt">0.00</div>
 			<div class="savingsPLN">PLN</div> -->
 		</div>
-		<span class="expandLessBtn material-symbols-rounded" style="display: none;">expand_less</span>
-		<span class="expandMoreBtn material-symbols-rounded">expand_more</span>
+	</div>
+		<!-- <span class="expandLessBtn material-symbols-rounded" style="display: none;">expand_less</span>
+		<span class="expandMoreBtn material-symbols-rounded">expand_more</span> -->
 	</div>
 	<ul class="list">
 		<!-- <div class="tile ">
