--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <!-- SETTINGS -->
 <div class="settings hidden">
 
-	<div class="salaryText">Enter Your Salary:</div>
-	<input class="setInput" type="number" placeholder="00.00">
+	<div class="salaryText">Set Your Budget</div>
+	<input class="setInput" type="number" placeholder="0.00">
 	<div class="setPLN">PLN</div>
 	<div class="setButtons">
 		<span class="SetConfirmBtn material-symbols-rounded">done</span>
@@ -38,7 +38,10 @@
 <!-- INPUT SCREEN -->
 <div class="inputs hidden">
 	<input class="inputName" type="text" placeholder="Name">
-	<input class="inputAmnt" type="number" placeholder="00.00">
+	<div class="amountWraper">
+		<input class="inputAmnt" type="number" placeholder="00.00">
+		<div class="inputsPLN">PLN</div>
+	</div>
 	<div class="categories">
 		<div class="expenseCat">Expense</div>
 		<div class="debtCat">Debt</div>
