--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 <div class="settings hidden">
 
 	<div class="salaryText">Set Your Budget</div>
+	<div class="setInputWraper">
 	<input class="setInput" type="number" placeholder="0.00">
 	<div class="setPLN">PLN</div>
-	<div class="setButtons">
-		<span class="SetConfirmBtn material-symbols-rounded">done</span>
+	<span class="SetConfirmBtn material-symbols-rounded">done</span>
 	</div>
+	
+	
 </div>
 
 <!-- INPUT SCREEN -->
