--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </style>
 	<link rel="stylesheet" href="style.css" />
 	<!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"> -->
-	<title>Xpense v3</title>
+	<title>Xpense</title>
 </head>
 <body>
 <!-- SETTINGS -->
