--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 
   <div class="controls">
     <select id="player-select">
-      <option value="Gryczan">Gryczan</option>
-      <option value="W0jci4">W0jci4</option>
-      <option value="100kgBALL">100kgBALL</option>
-      <option value="¥ngCl0n">¥ngCl0n</option>
+      <option value="Gryczan">GRYCZAN</option>
+      <option value="W0jci4">WÓJCIA</option>
+      <option value="100kgBALL">KULA</option>
+      <option value="¥ngCl0n">CLON</option>
     </select>
     
     <div class="button-row">
